--- a/Resume.html
+++ b/Resume.html
@@ -7,7 +7,12 @@
     border: 1px solid black;
   }
     </style>
-  <title>Page Title</title>
+  <title>RESUME</title>
+
+
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <div id="cv">
+
 </head>
 <body>
   <div align="center">
@@ -15,22 +20,39 @@
   <h1>CURRICULAM VITAE</h1></div>
 
 
-  <img src = "cv_pic.jpg"  align="right"style="width:220px;height:150px;">
+  <img src = "cv_pic.jpg"  align="center"style="width:200px;height:150px;"/>
   <ul>
-    <li>Name: NAFUJA TARANNA</p>
+
+    <p>Name: NAFUJA TARANNA</p>
   <p>Address:6/TA,38/6,Mirpur,Dhaka-1216.</p>
   <p>EMAIL:nafujataranna@gmail.com.</p>
   <p>Phone:018xxxxxxxx</p>
+</div>
+</body>
+</html>
+<div id= "info">
   <h3>PERSONAL DETAILS:</h3>
   <p>Date of Birth: 14th October,1994.</p>
   <p>FATHERS NAME: HEMAYET HOSSAIN.</p>
   <p>MOTHERS NAME: BILKIS BEGUM.</p>
   <p>NATIONALITY: BANGLADESHI.</p>
   <p>GENDER: FEMALE.</p>
+  <p>Marital Status: Unmarried.</p>
+</div>
+<div id= "obj">
   <h3>CAREER OBJECTIVE:</h3>
   <p>To persue a challengeing career in Web Development.</p>
+</div>
+<div id= "hby">
   <h3>HOBBIES:</h3>
   <p>Travelling,Doing Shopping,Eating different kinds of Food.</p>
+</div>
+<div id="skill">
+  <h3>Technical Skills:</h3>
+  <p>Language:C++,JAVA.</p>
+  <p>Database:Mysql.</p>
+</div>
+<div id="edu">
 
   <h3>EDUCATIONAL QUALIFICATION:</h3>
   <table style="width:100%">
@@ -60,8 +82,9 @@
     </tr>
 
 </table>
-</ul>
 
+</ul>
+</div>
 
 
 </body>
